dropshot/tests/fail/bad_trait_only6.stderr
error: context type `Context` must not have generics
 --> tests/fail/bad_trait_only6.rs:9:17
  |
9 |     type Context<T>;
  |                 ^^^
